--- a/src/views/post-details/post-details.scss
+++ b/src/views/post-details/post-details.scss
@@ -10,6 +10,7 @@
     .image-scroll-wrapper {
       overflow-x: auto;
       scroll-behavior: smooth;
+      position: relative;
       &::-webkit-scrollbar {
         display: none;
       }
@@ -62,6 +63,57 @@
             flex: 1 1 auto;
           }
         }
+      }
+      .shareIcon {
+        position: fixed;
+        right: 0;
+        top: 250px;
+        background-color: $white;
+        padding: 10px;
+        border-radius: 5px 0 0 5px;
+        width: 45px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        box-shadow: $shadow-small;
+        z-index: 9;
+        &:hover {
+          box-shadow: $shadow-purple;
+        }
+        svg {
+          font-size: 1.2rem;
+          color: $purple;
+        }
+      }
+    }
+    .share-modal {
+      ::v-deep .popup-header {
+        > div {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          svg {
+            font-size: 1.2rem;
+            cursor: pointer;
+          }
+        }
+      }
+      ::v-deep .popup-body {
+        .icon-wrapper {
+          display: flex;
+          justify-content: space-between;
+          margin-top: 30px;
+          flex-wrap: wrap;
+          img {
+            max-width: 80px;
+            cursor: pointer;
+          }
+        }
+      }
+      ::v-deep .popup-footer {
+        display: none;
       }
     }
   }
@@ -154,6 +206,11 @@
               flex: 1 1 255px;
             }
           }
+        }
+      }
+      .share-modal {
+        ::v-deep .popup-container {
+          width: 90% !important;
         }
       }
     }
