--- a/src/views/rental/rental.html
+++ b/src/views/rental/rental.html
@@ -1,8 +1,17 @@
 <div class="rental-wrapper container p-0 mb-5 pb-1">
-  <RentalCategorySelect
-    class="mt-3"
-    v-if="!queryParams.category || !getSelectedRentalCategory"
-  />
+  <RentalCategorySelect class="mt-3" v-if="!getSelectedRentalCategory" />
+  <div class="row p-3" v-if="!getSelectedRentalCategory">
+    <div class="col-12">
+      <section>
+        <h5>Browse By <span>Brands</span></h5>
+        <div class="brands">
+          <span v-for="index of 20">
+            <img src="../../assets/brand.png" />
+          </span>
+        </div>
+      </section>
+    </div>
+  </div>
 
   <RentalList :data="getRentalData" />
 </div>
