--- a/src/views/rental/rental.scss
+++ b/src/views/rental/rental.scss
@@ -1,48 +1,32 @@
 .rental-wrapper {
-  .category-cont {
-    margin: 30px 0 0 !important;
+  .brands {
     display: flex;
-    .category-list {
-      box-shadow: $shadow-small;
-      font-weight: 700;
-      min-height: 4rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    &::-webkit-scrollbar {
+      width: 0;
+      height: 0;
+      display: none;
+      background: transparent;
+    }
+    span {
+      margin-right: 15px;
+      display: inline-flex;
       flex-direction: column;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: 0.3s ease;
-      padding: 10px 15px;
-      word-break: break-word;
-      text-align: center;
-      color: rgba($black, 0.8);
-      padding: 30px 0;
-      font-size: 1.1rem;
-      width: 100%;
-      &:hover {
-        color: $purple;
-        box-shadow: $shadow-purple;
-      }
+      align-items: center;
+      border: 1px solid $purple;
+      box-sizing: border-box;
+      padding: 10px;
+      border-radius: 50%;
       img {
-        max-height: 40px;
-        margin-bottom: 10px;
+        max-height: 50px;
       }
     }
   }
   @media screen and (max-width: 991px) {
     padding-right: 35px;
-
-    .category-cont {
-      padding-right: 0;
-      margin: 20px 0 0 !important;
-      .category-list {
-        padding: 20px;
-        font-size: 1rem;
-        img {
-          max-height: 30px;
-        }
-      }
-    }
   }
 }
